# GanttAi

./: .gitignore  README.md
config/: default.toml
server/: .env  Cargo.toml  README.md
server/src/: main.rs
server/src/api/routes/: analysis.rs  mod.rs  summary.rs  task.rs  visualization.rs
server/src/db/: mod.rs  schema.rs
server/src/models/: task.rs
server/src/utils/: config.rs  error.rs  mod.rs
src/utils/: config.rs
